--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "polymer-starter-kit",
+  "name": "la-note",
   "private": true,
   "dependencies": {
     "polymer": "Polymer/polymer#master",
