--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,9 @@
         "type": "image/png"
       }
   ],
-  "start_url": "",
+  "theme_color" : "#000000",
+  "background_color" : "#FFFFFF",
+  "start_url": "index.html",
   "display": "standalone",
+  "orientation" : "portrait"
 }
